[build] return native compilation via ktn